--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1141,3 +1141,39 @@ body {
       font-size: 1.8rem; /* Réduire légèrement la taille des icônes sur les très petits écrans */
   }
 }
+
+
+/* Cacher le menu par défaut sur les petits écrans */
+.nav__menu {
+  display: none;
+}
+
+/* Styles spécifiques pour l'affichage mobile */
+@media screen and (max-width: 768px) {
+  .nav__menu {
+      display: none;
+      position: absolute;
+      top: 60px; /* Ajuste en fonction de la hauteur de ton header */
+      right: 0;
+      background-color: #000; /* Couleur de fond du menu */
+      width: 100%;
+      height: calc(100vh - 60px); /* Ajuste en fonction de la hauteur de ton header */
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      z-index: 1;
+  }
+
+  .nav__menu.active {
+      display: flex;
+  }
+
+  .nav__item {
+      margin: 20px 0;
+  }
+
+  .nav__toggle {
+      display: block;
+  }
+}
